--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -185,6 +185,11 @@
    "source": [
     "#export\n",
     "class TokBatchTransform(Transform):\n",
+    "    \"\"\"\n",
+    "    Tokenizes texts in batches using pretrained HuggingFace tokenizer.\n",
+    "    The first element in a batch can be single string or 2-tuple of strings.\n",
+    "    If `with_labels=True` the \"labels\" are added to the output dictionary.\n",
+    "    \"\"\"\n",
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
     "                 config=None, tokenizer=None, is_lm=False, with_labels=False,\n",
     "                 padding=True, truncation=True, max_length=None, \n",
@@ -206,8 +211,6 @@
     "        else: # batch is list of texts\n",
     "            texts = (list(batch),)\n",
     "            batch = [(s, ) for s in batch]\n",
-    "        # return_tensors = None if self.is_lm else 'pt'\n",
-    "        # padding = None if self.is_lm else self.padding\n",
     "        inps = self.tokenizer(*texts,\n",
     "                              add_special_tokens=True,\n",
     "                              padding=self.padding,\n",
@@ -468,13 +471,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>now that che ( 2008 ) has finished its relatively short australian cinema run ( extremely limited release : 1 screen in sydney, after 6wks ), i can guiltlessly join both hosts of \" at the movies \" in taking steven soderbergh to task. &lt; br / &gt; &lt; br / &gt; it's usually satisfying to watch a film director change his style / subject, but soderbergh's most recent stinker, the girlfriend experience ( 2009 ), was also missing a story, so narrative ( and editing? ) seem to suddenly be soderbergh's main challenge. strange, after 20 - odd years in the business. he was probably never much good at narrative, just hid it well inside \" edgy \" projects. &lt; br / &gt; &lt; br / &gt; none of this excuses him this present, almost diabolical failure. as david stratton warns, \" two parts of che don't ( even</td>\n",
+       "      <td>i really wanted to love this show. i truly, honestly did. &lt; br / &gt; &lt; br / &gt; for the first time, gay viewers get their own version of the \" the bachelor \". with the help of his obligatory \" hag \" andra, james, a good looking, well - to - do thirty - something has the chance of love with 15 suitors ( or \" mates \" as they are referred to in the show ). the only problem is half of them are straight and james doesn't know this. if james picks a gay one, they get a trip to new zealand, and if he picks a straight one, straight guy gets $ 25, 000. how can this not be fun?! take my hand, lets stroll : &lt; br / &gt; &lt; br / &gt; the most glaring problem with this show is the bachelor himself.</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>many neglect that this isn't just a classic due to the fact that it's the first 3d game, or even the first shoot -'em - up. it's also one of the first stealth games, one of the only ( and definitely the first ) truly claustrophobic games, and just a pretty well - rounded gaming experience in general. with graphics that are terribly dated today, the game thrusts you into the role of b. j. ( don't even * think * i'm going to attempt spelling his last name! ), an american p. o. w. caught in an underground bunker. you fight and search your way through tunnels in order to achieve different objectives for the six episodes ( but, let's face it, most of them are just an excuse to hand you a weapon, surround you with nazis and send you out to waste one of the nazi leaders</td>\n",
-       "      <td>positive</td>\n",
+       "      <td>well, what can i say. &lt; br / &gt; &lt; br / &gt; \" what the bleep do we know \" has achieved the nearly impossible - leaving behind such masterpieces of the genre as \" the postman \", \" the dungeon master \", \" merlin \", and so fourth, it will go down in history as the single worst movie i have ever seen in its entirety. and that, ladies and gentlemen, is impressive indeed, for i have seen many a bad movie. &lt; br / &gt; &lt; br / &gt; this masterpiece of modern cinema consists of two interwoven parts, alternating between a silly and contrived plot about an extremely annoying photographer, abandoned by her husband and forced to take anti - depressants to survive, and a bunch of talking heads going on about how quantum physics supposedly justifies their new - agy pseudo - philosophy. basically, if</td>\n",
+       "      <td>negative</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -501,13 +504,13 @@
     {
      "data": {
       "text/plain": [
-       "({'input_ids': tensor([[  101,  6274,  5125,  ...,  1998,  2130,   102],\n",
-       "          [  101,  2116, 19046,  ...,  1010,  2004,   102],\n",
-       "          [  101,  1045,  2428,  ...,  3272,  1010,   102],\n",
+       "({'input_ids': tensor([[ 101, 6274, 5125,  ..., 1998, 2130,  102],\n",
+       "          [ 101, 1996, 4497,  ..., 2090, 1005,  102],\n",
+       "          [ 101, 2085, 2008,  ..., 2839, 1025,  102],\n",
        "          ...,\n",
-       "          [  101,  1045,  3427,  ...,  2091,  1012,   102],\n",
-       "          [  101,  2348,  3858,  ...,  1997,  1996,   102],\n",
-       "          [  101,  2023,  2003,  ...,  2137,  1999,   102]], device='cuda:0'),\n",
+       "          [ 101, 2024, 2017,  ..., 2015, 2000,  102],\n",
+       "          [ 101, 1045, 3427,  ..., 2091, 1012,  102],\n",
+       "          [ 101, 1045, 2018,  ..., 1007, 1012,  102]], device='cuda:0'),\n",
        "  'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
@@ -515,7 +518,7 @@
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1]], device='cuda:0')},\n",
-       " TensorCategory([0, 1, 0, 1, 0, 0, 1, 1], device='cuda:0'))"
+       " TensorCategory([0, 1, 0, 1, 1, 0, 0, 0], device='cuda:0'))"
       ]
      },
      "execution_count": null,
@@ -571,8 +574,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>many neglect that this isn't just a classic due to the fact that it's the first 3d game, or even the first shoot -'em - up. it's also one of the first stealth games, one of the only ( and definitely the first ) truly claustrophobic games, and just a pretty well - rounded gaming experience in general. with graphics that are terribly dated today, the game thrusts you into the role of b. j. ( don't even * think * i'm going to attempt spelling his last name! ), an american p. o. w. caught in an underground bunker. you fight and search your way through tunnels in order to achieve different objectives for the six episodes ( but, let's face it, most of them are just an excuse to hand you a weapon, surround you with nazis and send you out to waste one of the nazi leaders</td>\n",
-       "      <td>positive</td>\n",
+       "      <td>i really wanted to love this show. i truly, honestly did. &lt; br / &gt; &lt; br / &gt; for the first time, gay viewers get their own version of the \" the bachelor \". with the help of his obligatory \" hag \" andra, james, a good looking, well - to - do thirty - something has the chance of love with 15 suitors ( or \" mates \" as they are referred to in the show ). the only problem is half of them are straight and james doesn't know this. if james picks a gay one, they get a trip to new zealand, and if he picks a straight one, straight guy gets $ 25, 000. how can this not be fun?! take my hand, lets stroll : &lt; br / &gt; &lt; br / &gt; the most glaring problem with this show is the bachelor himself.</td>\n",
+       "      <td>negative</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -604,12 +607,12 @@
      "data": {
       "text/plain": [
        "({'input_ids': tensor([[  101,  6274,  5125,  ...,  1998,  2130,   102],\n",
-       "          [  101,  2116, 19046,  ...,  1010,  2004,   102],\n",
-       "          [  101,  1045,  2428,  ...,  3272,  1010,   102],\n",
+       "          [  101,  1996,  4497,  ...,  2090,  1005,   102],\n",
+       "          [  101,  2085,  2008,  ...,  2839,  1025,   102],\n",
        "          ...,\n",
-       "          [  101,  1000,  1996,  ...,  3683,  1010,   102],\n",
-       "          [  101,  1996,  5745,  ...,  3084,  2053,   102],\n",
-       "          [  101,  2077, 13932,  ...,  1012,  1026,   102]], device='cuda:0'),\n",
+       "          [  101,  1996,  2095,  ..., 13433, 21565,   102],\n",
+       "          [  101,  1045,  3427,  ...,  2091,  1012,   102],\n",
+       "          [  101,  2348,  3858,  ...,  1997,  1996,   102]], device='cuda:0'),\n",
        "  'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
@@ -717,41 +720,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-baca2dc48733f0f6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset csv/default (download: Unknown size, generated: Unknown size, post-processed: Unknown size, total: Unknown size) to /root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0...\n"
+      "Using custom data configuration default-baca2dc48733f0f6\n",
+      "Reusing dataset csv (/root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b58c7642268345e2b2da21242fc978fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', layout=Layout(width='20px'), max=1.0), HTML(value=''…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset csv downloaded and prepared to /root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d959972dbc24828a4b86d978d35ac6b",
+       "model_id": "4177377c67d341278a7f8c2dea6417e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -772,7 +748,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2db7a9a3fc6a4578a9e6d870a757219d",
+       "model_id": "4ff76ae590e84fe7826a1094c2b220c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,19 +822,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>hair from her home by mary, driven to the brady home, and forced into an impromptu dance with the crippled [MASK]! the sheriff is hurled onto a [MASK] fence and we see how cats combat the sleepwalkers unlike humans. we see mary and charles'abilities to \" dim \" themselves and his car using a power of [MASK]visibility. writer stephen king [MASK] finds time to include [unused42] and horror director buddies of his in a [MASK] scene sequence with [MASK] barker and tobe hooper [MASK] forensics officers, joe dante [MASK] john [MASK]is as photograph experts [MASK] &lt; br [MASK] &gt; &lt; br / &gt; the film is [MASK] in a tongue shivering in [MASK]</td>\n",
+       "      <td>[MASK] hour and [MASK] half to kill and [MASK] soviets you [MASK] to end [MASK] feeling frustrated and confused 1716 rent this winner. [SEP] [CLS] \" gunga [MASK] [MASK] : one of the greatest adventure domingofra told! a story about [MASK] british foreign legion in 19th century india and a [MASK]ly \" [MASK] - bearer \" named gunga din, a local denize [MASK] who aspire [MASK] to be [MASK] like his tristan [MASK] ; three british [MASK] [MASK] whose loyalty and cam [MASK]derie for each other extend far beyond [MASK] boundsdie mere patriotism. their's is a true and abiding friendship [MASK] one another and each would be willing [MASK] sacrifice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>like to enjoy bad acting [MASK] [MASK] screenplay and bad [MASK] else. and by [MASK] turn of [MASK] - i am [MASK] of them ahmad [MASK] there are [MASK] when i have an urge of seeing a really bad movie and look [MASK] soaring some trash and here you go [MASK] [MASK] day is saved! but that's definitely an opinion of mine and doesn't haveouring with anyones'[MASK]. [MASK] [MASK] / &gt; &lt; br / &gt; [MASK] i wanted to say is that if you want [MASK] [MASK] [MASK] terrible movie - then fell [MASK]'s casanova is definitely the [MASK], but heed my advice and narration't rate it by important means</td>\n",
+       "      <td>meeting again an old friend, whom i had not seen for almost 15 years, which he spent in several panamanian jails. the young man i used to know is gone, not only because he insides older [MASK] but due to his exposure for a [MASK] time to the penal system. there are jails and there are jails, one must [MASK], but this one prisoner in \" shot in the heart \" is definitely out of this world. [SEP] [CLS] i [MASK] this movie. [MASK] [MASK] because i am a big fan of moritz bleibtreu, although he is in practically [MASK] german movies [MASK] count. but also because he fat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>! if [MASK] person stood in front of another's house [MASK] made noises with a wind chime they [MASK] be considered a lunatic, not gain entrance. shimmering br [MASK] &gt; &lt; br / &gt; japan emphasis on human relationships, group oriented [MASK] moag \" i want a life that's mine \" american individual [MASK]. &lt; br / [MASK] [MASK] br / &gt; [MASK] [MASK] dance refined elegance. [MASK] almost geometrical [MASK] mechanical precision. moag dance martha graham freaking out on lsd while wearing a not - very - auspicious white japanese funeral shroud. performed by a geisha down a ramp in a place that looks like [MASK] strip</td>\n",
+       "      <td>and replaced with songs. i've read this [MASK] [MASK] and recently was lucky enough to see it [MASK], at it remains one of [MASK] favourite shakespearian comedies, but this russian seems to take all that i [MASK] about it away [MASK] the princess, [MASK] no doubt doing what [MASK] was directed to do, had no regal bearing, [MASK] all the girls seemed to lose the clever [MASK] of their characters - gonzalez affected by unwise cuts, which not only took away the female characters already sparse [MASK], but took comments out of context - it [MASK] a little unnerving to hear the princess proclaim ; \" we are wise girls to mock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>&lt; br / &gt; this would seem to [MASK] the entire argument put forward in the film that the [MASK] whole earth \" picture is actually a small part of the planet framed by the spacecraft window. &lt; [MASK] / &gt; &lt; [MASK] / &gt; i [MASK] waiting for bart sibre [MASK] [MASK] [MASK] claim that the historical weather data [MASK] been faked by nasa, though that would no [MASK] involve them [MASK] also replacing every archived newspaper copy with a weather map, and the ones [MASK] private hands would still [MASK] a problem. &lt; br / &gt; &lt; [MASK] / &gt; ah, a [MASK] : \" trying to [MASK] 1928it this movie by referring to [MASK] weather data [MASK]</td>\n",
+       "      <td>for [MASK] the year that he ocean. i'm guessing that he stayed because he was supposed to see how good [MASK] life was [MASK] to the poverty [MASK] [MASK] frightening parador. i think he took too many things for granted in life and he needed to get a serious reality check by remaining in [MASK] country for as long as he did. &lt; br / &gt; &lt; br / [MASK] but......... [unused9]. anyways. [MASK]... [MASK].. [MASK].. [MASK] is why i [MASK] this lit recital [MASK] out of 10. [SEP] [CLS] i don't quite get the rating for the amati</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -891,19 +867,19 @@
        "         ...,\n",
        "         [1, 1, 1,  ..., 1, 1, 1],\n",
        "         [1, 1, 1,  ..., 1, 1, 1],\n",
-       "         [1, 1, 1,  ..., 1, 1, 1]]), 'input_ids': tensor([[15935,  1006,  5697,  ...,  2000,  1037,  3663],\n",
-       "         [  103,   102,   101,  ...,   103,  2040,  2074],\n",
-       "         [ 1011,  2940,  1010,  ...,  2036, 22249, 10561],\n",
+       "         [1, 1, 1,  ..., 1, 1, 1]]), 'input_ids': tensor([[ 1010,  2743,  3215,  ...,  4569,   103,  1996],\n",
+       "         [10933,  2018,  2517,  ...,  1012,  1999,  2804],\n",
+       "         [ 8502,  2599,  5889,  ...,  2055,  2023,   103],\n",
        "         ...,\n",
-       "         [ 1000,  1000,  3944,  ...,  3033,  2024,  4359],\n",
-       "         [ 1998,  1045,  1005,  ...,  2026,  4752,  5769],\n",
-       "         [  103,  1998, 15650,  ...,  1996, 22444,  1998]]), 'labels': tensor([[ -100,  -100,  -100,  ...,  -100,  -100,  -100],\n",
-       "         [ 1012,  -100,  -100,  ...,  5816,  -100,  -100],\n",
-       "         [ -100,  -100,  -100,  ...,  -100,  -100,  2001],\n",
+       "         [ 2862,  2073,  2045,  ...,   103,  2000,  9191],\n",
+       "         [  103,  1010,  2069,  ...,  1997,  4438,   103],\n",
+       "         [ 2821,  2092,  1012,  ...,  2051,  2027,   103]]), 'labels': tensor([[-100, -100, -100,  ..., -100, 1010, -100],\n",
+       "         [-100, -100, -100,  ..., -100, -100, -100],\n",
+       "         [-100, -100, -100,  ..., -100, -100, 2061],\n",
        "         ...,\n",
-       "         [ -100,  -100,  -100,  ...,  -100,  2024,  -100],\n",
-       "         [ -100,  -100,  -100,  ...,  -100,  -100,  1999],\n",
-       "         [ 9916,  -100,  2054,  ...,  -100, 24623,  -100]])},)"
+       "         [-100, -100, -100,  ..., 2038, -100, -100],\n",
+       "         [4808, -100, -100,  ..., -100, -100, 2143],\n",
+       "         [-100, -100, -100,  ..., -100, -100, 3863]])},)"
       ]
      },
      "execution_count": null,
@@ -939,6 +915,7 @@
       "Converted 10_examples.classification-imdb.ipynb.\n",
       "Converted 11_examples.mlm-imdb.ipynb.\n",
       "Converted 12_examples.glue-benchmark.ipynb.\n",
+      "Converted 12a_examples.glue-benchmark-sweeps.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
