--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "665e7136",
+   "id": "94b6e6b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05dc0513",
+   "id": "f007ad59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e4e82c",
+   "id": "4ad1f2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16fc7093",
+   "id": "d70c1201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a2e2ef",
+   "id": "725c6ca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1590a96",
+   "id": "25fe554c",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e23461",
+   "id": "d98ec6c8",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27175e46",
+   "id": "33454f60",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faaef674",
+   "id": "63e85ce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bbf4c98",
+   "id": "78b6b8b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be46319",
+   "id": "10cb6672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0d7d5d",
+   "id": "5b9d0dde",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "486d8dc3",
+   "id": "a77f718b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b9e978",
+   "id": "5bd4a59f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fa9af1",
+   "id": "057ee7a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,52 +188,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096d2fab",
+   "id": "5370b117",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
     "class TransCallback(Callback):\n",
-    "    \"Handles usecase with loss returned by HuggingFace model\"\n",
+    "    \"Handles HuggingFace model inputs and outputs\"\n",
+    "    def __init__(self, model):\n",
+    "        self.labels = tuple()\n",
+    "        self.model_args = {k:v.default for k, v in signature(model.forward).parameters.items()}\n",
+    "    \n",
+    "    def before_batch(self):\n",
+    "        if 'labels' in self.xb[0].keys():\n",
+    "            self.labels = (self.xb[0]['labels'], )\n",
+    "        self.learn.xb = tuple([self.xb[0].get(k, self.model_args[k]) for k in self.model_args.keys()])\n",
+    "    \n",
     "    def after_pred(self):\n",
     "        if 'loss' in self.pred:\n",
     "            self.learn.loss_grad = self.pred.loss\n",
     "            self.learn.loss = self.pred.loss.clone()\n",
-    "            if 'labels' in self.xb[0].keys():\n",
-    "                self.learn.yb = (self.xb[0]['labels'], )\n",
-    "            self.learn.compute_loss = False\n",
     "        if isinstance(self.pred, QuestionAnsweringModelOutput):\n",
     "            self.learn.pred = (self.pred.start_logits, self.pred.end_logits)\n",
-    "        else: self.learn.pred = self.pred.logits"
+    "        else: self.learn.pred = self.pred.logits\n",
+    "    \n",
+    "    def after_loss(self):\n",
+    "        if len(self.labels):\n",
+    "            self.learn.yb = self.labels\n",
+    "            self.labels = tuple()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d10de5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#skip\n",
-    "#hide\n",
-    "def __init__(self, dls, model, loss_func=None, opt_func=Adam, lr=defaults.lr, splitter=trainable_params, cbs=None,\n",
-    "                 metrics=None, path=None, model_dir='models', wd=None, wd_bn_bias=False, train_bn=True,\n",
-    "                 moms=(0.95,0.85,0.95)):\n",
-    "        path = Path(path) if path is not None else getattr(dls, 'path', Path('.'))\n",
-    "        if loss_func is None:\n",
-    "            loss_func = getattr(dls.train_ds, 'loss_func', None)\n",
-    "            assert loss_func is not None, \"Could not infer loss function from the data, please pass a loss function.\"\n",
-    "        self.dls,self.model = dls,model\n",
-    "        store_attr(but='dls,model,cbs')\n",
-    "        self.training,self.create_mbar,self.logger,self.opt,self.cbs = False,True,print,None,L()\n",
-    "        self.add_cbs(L(defaults.callbacks)+L(cbs))\n",
-    "        self(\"after_create\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "800831db",
+   "id": "e6028d18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,36 +232,12 @@
     "        splitter = kwargs.get('splitter', None)\n",
     "        if splitter is None: kwargs['splitter'] = default_splitter\n",
     "        super().__init__(dls, model, **kwargs)\n",
-    "        self.model_args = set(signature(model.forward).parameters.keys())\n",
-    "        self.add_cb(TransCallback())\n",
-    "        self.compute_loss = True\n",
-    "\n",
-    "    def one_batch(self, i, b):\n",
-    "        self.iter = i\n",
-    "        b_on_device = tuple(to_device(e) for e in b) if self.dls.device is not None else b\n",
-    "        self._split(b_on_device)\n",
-    "        self._with_events(self._do_one_batch, 'batch', CancelBatchException)\n",
-    "    \n",
-    "    def _do_one_batch(self):\n",
-    "        x = self.xb[0]\n",
-    "        for k in x.keys():\n",
-    "            if k not in self.model_args: del x[k]\n",
-    "        self.pred = self.model(**self.x)\n",
-    "        self('after_pred')\n",
-    "        if len(self.yb) and self.compute_loss:\n",
-    "            self.loss_grad = self.loss_func(self.pred, *self.yb)\n",
-    "            self.loss = self.loss_grad.clone()\n",
-    "        self('after_loss')\n",
-    "        if not self.training or not len(self.yb): return\n",
-    "        self('before_backward')\n",
-    "        self.loss_grad.backward()\n",
-    "        self._with_events(self.opt.step, 'step', CancelStepException)\n",
-    "        self.opt.zero_grad()"
+    "        self.add_cb(TransCallback(model))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22890b00",
+   "id": "efa1c5a6",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -283,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f67f4de",
+   "id": "d7a3bf36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,17 +269,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec72d0c9",
+   "id": "09242d50",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.weight', 'vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_projector.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_layer_norm.weight', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias']\n",
       "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['pre_classifier.weight', 'pre_classifier.bias', 'classifier.weight', 'classifier.bias']\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -336,17 +299,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.426269</td>\n",
-       "      <td>0.398175</td>\n",
-       "      <td>0.860000</td>\n",
-       "      <td>00:21</td>\n",
+       "      <td>0.587621</td>\n",
+       "      <td>0.441315</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>00:22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.240389</td>\n",
-       "      <td>0.487833</td>\n",
-       "      <td>0.850000</td>\n",
-       "      <td>00:21</td>\n",
+       "      <td>0.365849</td>\n",
+       "      <td>0.449296</td>\n",
+       "      <td>0.810000</td>\n",
+       "      <td>00:22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -368,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1d2521",
+   "id": "d2b83c5a",
    "metadata": {},
    "source": [
     "## Fin"
@@ -377,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9906e47e",
+   "id": "4d7091ee",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96767f22",
+   "id": "428ec687",
    "metadata": {},
    "outputs": [],
    "source": []
