--- a/nbs/_13_examples.qa_squad_v1.ipynb
+++ b/nbs/_13_examples.qa_squad_v1.ipynb
@@ -146,8 +146,6 @@
     }
    ],
    "source": [
-    "# train_ds = train_ds.select(range(1000))\n",
-    "# valid_ds = valid_ds.select(range(200))\n",
     "len(train_ds), len(valid_ds)"
    ]
   },
@@ -306,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['end_positions', 'input_ids', 'start_positions'])"
+       "['end_positions', 'input_ids', 'start_positions']"
       ]
      },
      "execution_count": null,
@@ -315,7 +313,7 @@
     }
    ],
    "source": [
-    "train_ds[0].keys()"
+    "train_ds.column_names"
    ]
   },
   {
@@ -324,19 +322,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'saint bernadette soubiro'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "example 8415\n",
+      "[CLS] where is the exiled tibetan government? [SEP] india rejected chinese demands that the torch route be clear of india's 150, 000 - strong tibetan exile community, by which they required a ban on congregation near the curtailed 3 km route. in response indian officials said india was a democracy, and \" a wholesale ban on protests was out of the question \". contradicting some other reports, indian officials also refused permission to the \" olympic holy flame protection unit \". the combined effect is a \" rapid deterioration \" of relations between india and china. meanwhile, the tibetan government in exile, which is based in india, has stated that it did not support the disruption of the olympic torch relay. [SEP]\n",
+      "Answer:  india\n"
+     ]
     }
    ],
    "source": [
-    "x, start_, end_ = train_ds[0]['input_ids'], train_ds[0]['start_positions'], train_ds[0]['end_positions']\n",
-    "tokenizer.decode(x[start_:end_], skip_special_tokens=True)"
+    "import random\n",
+    "# idx = random.randint(1, len(train_ds))\n",
+    "idx=8415\n",
+    "x, start_, end_ = train_ds[idx]['input_ids'], train_ds[idx]['start_positions'], train_ds[idx]['end_positions']\n",
+    "print(f'example {idx}')\n",
+    "print(tokenizer.decode(x))\n",
+    "print('Answer: ', tokenizer.decode(x[start_:end_+1], skip_special_tokens=True))"
    ]
   },
   {
@@ -393,8 +395,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.8 s, sys: 182 ms, total: 11 s\n",
-      "Wall time: 10.9 s\n"
+      "CPU times: user 12.8 s, sys: 987 ms, total: 13.8 s\n",
+      "Wall time: 13.8 s\n"
      ]
     }
    ],
@@ -411,24 +413,24 @@
     {
      "data": {
       "text/plain": [
-       "({'end_positions': tensor([137,  11,  25, 168,  52,  35, 147,  85], device='cuda:0'),\n",
-       "  'input_ids': tensor([[  101,  2000,  3183,  ...,     0,     0,     0],\n",
-       "          [  101,  2043,  2001,  ...,     0,     0,     0],\n",
-       "          [  101,  2054,  2194,  ...,     0,     0,     0],\n",
+       "({'end_positions': tensor([137,  48,  75,  66,  97,  50, 103,  46], device='cuda:0'),\n",
+       "  'input_ids': tensor([[ 101, 2000, 3183,  ...,    0,    0,    0],\n",
+       "          [ 101, 2104, 2054,  ...,    0,    0,    0],\n",
+       "          [ 101, 2040, 2024,  ...,    0,    0,    0],\n",
        "          ...,\n",
-       "          [  101,  2054,  2001,  ...,     0,     0,     0],\n",
-       "          [  101,  2129,  2172,  ...,     0,     0,     0],\n",
-       "          [  101, 16575,  1010,  ...,  7967,  1012,   102]], device='cuda:0'),\n",
-       "  'start_positions': tensor([130,  10,  22, 167,  50,  30, 146,  82], device='cuda:0'),\n",
+       "          [ 101, 2054, 2003,  ..., 2171, 1012,  102],\n",
+       "          [ 101, 2054, 2287,  ...,    0,    0,    0],\n",
+       "          [ 101, 2339, 2024,  ...,    0,    0,    0]], device='cuda:0'),\n",
+       "  'start_positions': tensor([130,  47,  37,  63,  96,  48, 101,  44], device='cuda:0'),\n",
        "  'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
        "          [1, 1, 1,  ..., 0, 0, 0],\n",
        "          [1, 1, 1,  ..., 0, 0, 0],\n",
        "          ...,\n",
+       "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 0, 0, 0],\n",
-       "          [1, 1, 1,  ..., 0, 0, 0],\n",
-       "          [1, 1, 1,  ..., 1, 1, 1]], device='cuda:0')},\n",
-       " TensorCategory([130,  10,  22, 167,  50,  30, 146,  82], device='cuda:0'),\n",
-       " TensorCategory([137,  11,  25, 168,  52,  35, 147,  85], device='cuda:0'))"
+       "          [1, 1, 1,  ..., 0, 0, 0]], device='cuda:0')},\n",
+       " TensorCategory([130,  47,  37,  63,  96,  48, 101,  44], device='cuda:0'),\n",
+       " TensorCategory([137,  48,  75,  66,  97,  50, 103,  46], device='cuda:0'))"
       ]
      },
      "execution_count": null,
@@ -438,6 +440,13 @@
    ],
    "source": [
     "dls.one_batch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## validation specific preproc"
    ]
   },
   {
@@ -684,17 +693,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1.980754</td>\n",
-       "      <td>3.172352</td>\n",
-       "      <td>0.293888</td>\n",
-       "      <td>03:31</td>\n",
+       "      <td>1.837070</td>\n",
+       "      <td>2.724871</td>\n",
+       "      <td>0.292588</td>\n",
+       "      <td>03:36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.066328</td>\n",
-       "      <td>2.692447</td>\n",
-       "      <td>0.345904</td>\n",
-       "      <td>03:36</td>\n",
+       "      <td>0.938913</td>\n",
+       "      <td>2.717798</td>\n",
+       "      <td>0.361508</td>\n",
+       "      <td>03:40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -747,7 +756,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([   0, 7413, 6918,  ..., 1029, 3761,  141])"
+       "tensor([   0, 3998,  866,  ..., 4811, 1547,  932])"
       ]
      },
      "execution_count": null,
@@ -980,7 +989,8 @@
        "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "            0,     0])"
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0])"
       ]
      },
      "execution_count": null,
@@ -1012,33 +1022,53 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------\n",
-      "label:       saint bernadette soubiro\n",
-      "prediction:  saint bernadette soubiro\n",
+      "label:       saint bernadette soubirous\n",
+      "prediction:  saint bernadette soubirous\n",
       "labels 130, 137; preds 130, 137\n",
       "----------------------------------------\n",
-      "label:       152\n",
-      "prediction:  152\n",
-      "labels 25, 26; preds 25, 26\n",
+      "label:       a copper statue of christ\n",
+      "prediction:  a copper statue of christ\n",
+      "labels 52, 56; preds 52, 56\n",
       "----------------------------------------\n",
-      "label:       \n",
-      "prediction:  royal and western infirm\n",
-      "labels 35, 35; preds 65, 70\n",
+      "label:       the main building\n",
+      "prediction:  grotto\n",
+      "labels 81, 83; preds 98, 99\n",
       "----------------------------------------\n",
-      "label:       hill\n",
-      "prediction:  hill\n",
-      "labels 62, 63; preds 62, 63\n",
+      "label:       a marian place of prayer and reflection\n",
+      "prediction:  a marian place of prayer and reflection\n",
+      "labels 95, 101; preds 95, 101\n",
       "----------------------------------------\n",
-      "label:       \n",
-      "prediction:  \n",
-      "labels 59, 59; preds 59, 59\n"
+      "label:       a golden statue of the virgin mary\n",
+      "prediction:  a golden statue of the virgin mary\n",
+      "labels 33, 39; preds 33, 39\n",
+      "----------------------------------------\n",
+      "label:       september 1876\n",
+      "prediction:  september 1876\n",
+      "labels 63, 64; preds 63, 64\n",
+      "----------------------------------------\n",
+      "label:       twice\n",
+      "prediction:  twice a year\n",
+      "labels 98, 98; preds 98, 100\n",
+      "----------------------------------------\n",
+      "label:       the observer\n",
+      "prediction:  the observer\n",
+      "labels 123, 124; preds 123, 124\n",
+      "----------------------------------------\n",
+      "label:       three\n",
+      "prediction:  three\n",
+      "labels 39, 39; preds 39, 39\n",
+      "----------------------------------------\n",
+      "label:       1987\n",
+      "prediction:  1987\n",
+      "labels 182, 182; preds 182, 182\n"
      ]
     }
    ],
    "source": [
-    "for inp, sp, ep, st, et, _ in zip(inps, preds0, preds1, targs[0], targs[1], range(5)):\n",
+    "for inp, sp, ep, st, et, _ in zip(inps, preds0, preds1, targs[0], targs[1], range(10)):\n",
     "    print(\"----------------------------------------\")\n",
-    "    print('label:      ', tokenizer.decode(inp[st:et], remove_special_tokens=False))\n",
-    "    print('prediction: ', tokenizer.decode(inp[sp:ep], remove_special_tokens=False))\n",
+    "    print('label:      ', tokenizer.decode(inp[st:et+1], remove_special_tokens=False))\n",
+    "    print('prediction: ', tokenizer.decode(inp[sp:ep+1], remove_special_tokens=False))\n",
     "    print(f\"labels {st.item()}, {et.item()}; preds {sp.item()}, {ep.item()}\")"
    ]
   },
